# mastohuman

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
docs/: TODO.md
mastohuman/: cli.py
mastohuman/config/: settings.py
mastohuman/db/: engine.py  models.py
mastohuman/etl/: normalize.py  pipeline.py
mastohuman/llm/: provider.py
mastohuman/mastodon_client/: client.py
mastohuman/render/: builder.py
mastohuman/templates/: base.html.j2  index.html.j2  person.html.j2
mastohuman/util/: logging.py
scripts/: make_source.sh  open_site.py
