[project]
name = "mastohuman"
version = "0.1.0"
description = "Mastodon Human-Centric Reader"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sqlmodel>=0.0.14",
    "mastodon.py>=2.1.4",
    "jinja2>=3.1.0",
    "openai>=1.0.0",
    "beautifulsoup4>=4.12.0", # For HTML normalization
    "tenacity>=8.2.0", # For rate limit backoff
    "sqlmodel",
]

[dependency-groups]
dev = [
    "pytest",
    "black",
    "ruff"
]

[project.scripts]
mastohuman = "mastohuman.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.sdist]
include = [
    "mastohuman/**/*.py",
    "mastohuman/templates/**/*.j2",
    "mastohuman/templates/**/*.md.j2",
    "mastohuman/py.typed",
    "/README.md", "LICENSE",
]

exclude = [
]

[tool.hatch.build.targets.wheel]
packages = ["mastohuman"]
include = [
    "mastohuman/**/*.py",
    "mastohuman/templates/**/*.j2",
    "mastohuman/templates/**/*.md.j2",
    "mastohuman/py.typed",
    "/README.md", "LICENSE",
]